; ModuleID = '/home/carl/AnghaBench/openwrt/target/linux/generic/files/drivers/net/phy/b53/extr_b53_mmap.c_b53_mmap_write64.c'
source_filename = "/home/carl/AnghaBench/openwrt/target/linux/generic/files/drivers/net/phy/b53/extr_b53_mmap.c_b53_mmap_write64.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.b53_device = type { i32 }

@EINVAL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.b53_device*, i32, i32, i32)* @b53_mmap_write64 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @b53_mmap_write64(%struct.b53_device* %0, i32 %1, i32 %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca %struct.b53_device*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i64, align 8
  %11 = alloca i64, align 8
  store %struct.b53_device* %0, %struct.b53_device** %6, align 8
  store i32 %1, i32* %7, align 4
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  %12 = load i32, i32* %9, align 4
  %13 = ashr i32 %12, 32
  %14 = sext i32 %13 to i64
  store i64 %14, i64* %10, align 8
  %15 = load i32, i32* %9, align 4
  %16 = sext i32 %15 to i64
  store i64 %16, i64* %11, align 8
  %17 = load i32, i32* %8, align 4
  %18 = srem i32 %17, 4
  %19 = call i64 @WARN_ON(i32 %18)
  %20 = icmp ne i64 %19, 0
  br i1 %20, label %21, label %24

21:                                               ; preds = %4
  %22 = load i32, i32* @EINVAL, align 4
  %23 = sub nsw i32 0, %22
  store i32 %23, i32* %5, align 4
  br label %36

24:                                               ; preds = %4
  %25 = load %struct.b53_device*, %struct.b53_device** %6, align 8
  %26 = load i32, i32* %7, align 4
  %27 = load i32, i32* %8, align 4
  %28 = load i64, i64* %11, align 8
  %29 = call i32 @b53_mmap_write32(%struct.b53_device* %25, i32 %26, i32 %27, i64 %28)
  %30 = load %struct.b53_device*, %struct.b53_device** %6, align 8
  %31 = load i32, i32* %7, align 4
  %32 = load i32, i32* %8, align 4
  %33 = add nsw i32 %32, 4
  %34 = load i64, i64* %10, align 8
  %35 = call i32 @b53_mmap_write32(%struct.b53_device* %30, i32 %31, i32 %33, i64 %34)
  store i32 0, i32* %5, align 4
  br label %36

36:                                               ; preds = %24, %21
  %37 = load i32, i32* %5, align 4
  ret i32 %37
}

declare dso_local i64 @WARN_ON(i32) #1

declare dso_local i32 @b53_mmap_write32(%struct.b53_device*, i32, i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
